3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

common/living.c: Don't use the last_heal object in experience objects as 
   sp regen penalty.  This should fix the problem of inconsistent sp regen
   rates - last_heal is used in experience objects if the permanent experience
   option is turned on.  MSW 2001-04-11

PeterM:  
server/spell_util.c:  fix peace so it gives experience
common/button.c:  change the "error" to a "debug" message
   to reduce server crashing.

------------------------------------------------------------------------------

Changes for 0.98.0:

server/skills.c: Modify inscription so that when inscribing cleric spells,
    it reduces grace.  Before, reduced mana no matter the type of spell.
server/c_object.c: Fix bug in pick_up where it was not using the right
   count for picking up objects if the player did not specify one.  This
   allowed players to put objects into containers that should not really
   fit.
server/player.c:  Don't let players shoot arrows at themself.  Also,
   minor changes to use new_draw_info_format.
server/swap.c: If recycle temp maps, don't save out random maps to
   get recycled.  MSW 2001/04/07

PeterM  2001/04/06:  
include/libproto.h common/object.c server/apply.c server/spell_util.c
Added a new function:  instead of stacking many burnout or firetrail
objects, only 1 per square is added.  Real reduction in server overhead.
No reduction in cosmetic effect.

common/porting.c: Fix compile warnings/bugs introduced by Win32 changes.
server/time.c: Modify move_player_mover so that it determines direction
   of the mover and then process accordingly, as well as formatting
   changes.